# sampling_tricks

./: README.md  TODO.md  project_setup.sh  pyproject.toml
antislop-sampler/: slopcalc.ipynb
src/JAX/: multinomial_sample.py  random.py
src/sampling_tricks/: __init__.py
src/sampling_tricks/HUGGINGFACE/: sampling_strats_hf.ipynb
src/sampling_tricks/JAX/: cot_sampler.py  cot_sampler_v1.py  cot_sampler_v5.py  multinomial_sample.py  temp.py
