[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sampling_tricks"
version = "0.1.0"
description = "A collection of sampling techniques and tricks"
authors = [{ name = "Jeff Coggshall", email = "thenextlocalminima@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.4.1",
    "torchao>=0.5.0",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "transformers>=4.45.1",
    "fairscale",
    "fire",
    "sentencepiece",
    "datasets",
    "ipykernel",
]

[project.urls]
"Homepage" = "https://github.com/voxmenthe/sampling_tricks"
"Bug Tracker" = "https://github.com/voxmenthe/sampling_tricks/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]